--- a/lit-form/package.json
+++ b/lit-form/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lion/ui": "^0.5.0",
     "@open-wc/scoped-elements": "^3.0.3",
+    "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "json-server": "^0.17.4",
     "lit": "^2.7.6",
     "pwa-helpers": "^0.9.1",
